--- a/_posts/Coding_Test/Baekjoon_Concept/2023-02-09-(백준_강의1)알고리즘 기초1 - 수학(개념).md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-02-09-(백준_강의1)알고리즘 기초1 - 수학(개념).md
@@ -25,7 +25,7 @@ typora-root-url: ../../..
 - 최대공약수 : 두 수의 몫이 서로소(더이상 공통수로 나눌 수 없을때)가 나올때까지 나눠서 `나눈 수` 들의 곱
 - 최소공배수 : 위의 `최대공약수에서 서로소(최종 몫)` 까지 다 곱한 값
 - 서로소 : 최대공약수가 1인 두 자연수
-  - 예 : 서로소인 3과 2의 경s우 공약수는 1만 있으므로 최대공약수는 1
+  - 예 : 서로소인 3과 2의 경우 공약수는 1만 있으므로 최대공약수는 1
     - 3은 약수 1,3을 가짐
     - 2는 약수 1,2를 가짐
 - **참고**
