--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-03-(백준_필수3)알고리즘 템플릿 - cpp.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-03-(백준_필수3)알고리즘 템플릿 - cpp.md
@@ -223,6 +223,8 @@ void func1(int n) {
 
 ## 백트래킹(Backtracking)
 
+**`상태 공간트리` 를 그려가면서 문제를 이해하고, 재귀 형태로 풀어나가면 된다.**
+
 **N과 M(1) - 대표적인 템플릿**
 
 ```c++
@@ -231,23 +233,42 @@ void func1(int n) {
 using namespace std;
 
 int n,m;
-int arr[10];
-bool isused[10];
+int outArr[10];
+bool visited[10];
 
-void func(int k) {
-    if(k == m) { // base condition
-        for(int i = 0 ; i<m; i++) cout << arr[i] << ' ';
+void func(int depth) {
+    if(depth == m) { // base condition
+        for(int i = 0 ; i<m; i++) cout << outArr[i] << ' ';
         cout << '\n';
         return;
     }
     for(int i = 1; i<=n; i++) {
-        if(!isused[i]) {
-            arr[k] = i;
-            isused[i] = true;
-            func(k+1); // 재귀
-            isused[i] = false; // backtracking
+        if(!visited[i]) {
+            outArr[depth] = i;
+            visited[i] = true;
+            func(depth+1); // 재귀
+            visited[i] = false; // backtracking
         }
     }
+}
+```
+
+<br>
+
+**부분수열의 합 - 응용(사고력 확장)**
+
+```c++
+// 이 문제도 위 코드와 같은 형태로 해결할 수 있지만, 좀 더 간단하게 해결할 수도 있다.
+// 위 코드의 경우 하나의 형태로만 재귀를 한것이다.
+// 하지만, 이 문제를 상태 트리 그려보면 값을 더한경우 안더한경우로 나눠 볼 수 있다.
+// 즉, 2개 형태로 재귀를 할 수 있고 훨씬 코드도 간결해진다.
+void func(int depth, int sum) {
+	if (depth == N) {
+		if (sum == S) result++;
+		return;
+	}
+	func(depth + 1, sum); // 안더함
+	func(depth + 1, sum + inArr[depth]); // 더함
 }
 ```
 
