--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-20-(백준_바킹독)1~11강 필수 문제모음.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-20-(백준_바킹독)1~11강 필수 문제모음.md
@@ -60,12 +60,12 @@ typora-root-url: ../../..
   * [곱셈](https://www.acmicpc.net/problem/1629)
   * [하노이 탑 이동 순서](https://www.acmicpc.net/problem/11729)
   * [Z](https://www.acmicpc.net/problem/1074)
-* **백트래킹** => 여기부터
+* **백트래킹** 
   * [N과 M(1)](https://www.acmicpc.net/problem/15649)
   * [N-Queen](https://www.acmicpc.net/problem/9663)
   * [부분수열의 합](https://www.acmicpc.net/problem/1182)
     * 순열과 조합 관련은 `next_permutation` 사용도 권장
-* **시뮬레이션**
+* **시뮬레이션** => 여기부터
   * [감시](https://www.acmicpc.net/problem/15683)
   * [스티커 붙이기](https://www.acmicpc.net/problem/18808)
   * [2048 (Easy)](https://www.acmicpc.net/problem/12100)
