--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-03-(백준_필수3)알고리즘 템플릿 - cpp.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-03-(백준_필수3)알고리즘 템플릿 - cpp.md
@@ -679,7 +679,7 @@ void unordered_map_example() {
 
 <br><br>
 
-## 이진 검색 트리(BST)
+## 이진 검색, 레드-블랙 트리(BST, RBT)
 
 **c++에서 STL에는 이진 검색 트리 + 자가 균형을 이루는 RBT 자료 구조로 정의되어서 제공한다.**
 
@@ -899,13 +899,17 @@ void dfs(int depth, vector<int> val) {
 
 **트리는 무방향이고 사이클이 없는 연결 그래프이다.**
 
-* **트리를 BFS 할 때 root부터 하므로 임의의 노드에서 그 노드의 부모는 이미 방문한거고, 자식들만 방문을 안한 상태인 것이다.**
-
-* **따라서 따로 visited배열이 필요없이 p배열(부모) 을 알고 있으면 된다.**
+* **트리의 순회방식 - BFS&DFS 순회, 이진 트리의 순회**
+* **여러가지 트리 - Segment**
+* 참고로 **BST, RBT**는 위에서 이미 정리 그리고 **우선순위 큐에 사용한 힙**도 이진트리임
+  * **좀 더 다양한 트리(Splay, OST, Range, Interval)는  [고급트리 개념](https://bh946.github.io/algorithm/(%EA%B3%A0%EA%B8%89%EA%B0%9C%EB%85%90)-%EA%B3%A0%EA%B8%89-%ED%8A%B8%EB%A6%AC(BST,-RBT,-Splay,-OST,-Range,-Interval,-Sgement)/) 에서 참고** 
 
 <br>
 
-**트리를 BFS, DFS**
+### 1. 트리의 BFS, DFS 순회
+
+* 트리를 **BFS** 할 때 root부터 하므로 임의의 노드에서 그 노드의 부모는 이미 방문한거고, 자식들만 방문을 안한 상태인 것이다.
+* 따라서 따로 **visited배열이 필요없이 p배열(부모)** 을 알고 있으면 된다.
 
 ```c++
 // DFS는 큐->스택 바꾸면 동일하게 동작
@@ -931,15 +935,116 @@ void bfs(int root) {
 
 <br>
 
-**이진 트리의 순회(레벨(=높이),전위,중위,후위)**
+### 2. 이진 트리의 순회
 
-* 레벨 순회 : 높이 순서대로 방문한다.
-  * 기존이랑 동일. root를 시작점으로 bfs 돌리면 높이 순서대로 위에서부터 차례로 순회한다.
+* **레벨 순회** : 높이 순서대로 방문한다.
+  * 기존이랑 **동일**. root를 시작점으로 **bfs** 돌리면 높이 순서대로 위에서부터 차례로 순회한다.
 * 전위, 중위, 후위 순회
   * 전위 : 위 -> 왼 -> 오
   * 중위 : 왼 -> 위 -> 오
   * 후위 : 왼 -> 오 -> 위
 * **구현 쉬워서 코드 생략**
+
+<br>
+
+### 3. Segment Tree(구간합)
+
+**여러개의 데이터가 연속으로 있을때 `배열` 에서는 그 구간의 합을 구할때 복잡도가 N이 걸리는데, 이걸 `세그먼트 트리` 를 이용해서 logN으로 개선시키려는 목적**
+
+* 리프 노드: 배열의 연속된 값 그 자체
+* 내부 노드: 왼쪽 자식과 오른쪽 자식의 합
+
+<br>
+
+```c++
+/*
+아래 코드는 "구간 합 구하기" 백준 문제를 풀었던 코드를 예시로 가져옴
+
+구간 합 구하는 함수 : segmentSum
+트리의 노드 수정하는 함수 : segmentUpdate
+*/
+
+#include<iostream>
+#include<vector>
+#include<cmath>
+using namespace std;
+
+long long inArr[2000010];
+long long outArr[5000010];
+
+// 재귀함수(세그먼트 트리 만드는)
+long long segmentBuild(int start, int end, int node) {
+	if (start == end) { // base condition
+		outArr[node] = inArr[start];
+		return outArr[node]; // 종료시점
+	}
+
+	int mid = (start + end) / 2; // mid 구해서 왼, 오 구간 나눔
+	outArr[node] = segmentBuild(start, mid, node * 2) + segmentBuild(mid + 1, end, node * 2 + 1);
+	return outArr[node]; // base condition (사실 바로 위 코드에 return 같이 적어도됨)
+}
+
+
+// 구하는 합 구간 left, right
+// node가 담당하는 구간 start, end
+long long segmentSum(int start, int end, int node, long long left, long long right) {
+	// 1. 겹치지 않는 경우 (left, right가 start, end의 왼쪽이거나 오른쪽 구간인 경우)
+	if ((left < start && right < start) || (left > end && right > end)) return 0;
+	
+	// 2. 완전히 포함하는 경우 (left, right가 start, end를 완전히 포함하는 경우)
+	if (left <= start && right >= end) return outArr[node];
+
+	// 3. 나머지 경우 (자식 트리 탐색)
+	int mid = (start + end) / 2;
+	return segmentSum(start, mid, node * 2, left, right) + segmentSum(mid + 1, end, node * 2 + 1, left, right);
+}
+
+// node가 담당하는 구간 start, end
+// 수정할 노드 index, 수정할 값 dif
+void segmentUpdate(int start, int end, int node, long long index, long long dif) {
+	// 1. 겹치지 않는 경우 (왼쪽이거나 오른쪽 구간인경우)
+	if ((start < index && end < index) || (start > index && end > index)) return;
+	// 2. left, right가 start, end를 완전히 포함하는 경우
+	if (start <= index && index <= end) outArr[node] += dif;
+	
+	// 무조건 종료시점(무한루프 안걸리게)
+	if (start == end) return;
+	// 3. 나머지 경우 (자식 트리 탐색)
+	int mid = (start + end) / 2;
+	segmentUpdate(start, mid, node * 2, index, dif);
+	segmentUpdate(mid + 1, end, node * 2 + 1, index, dif);
+}
+
+int N, M, K;
+
+int main() {
+	ios_base::sync_with_stdio(0); cin.tie(0); cout.tie(0);
+	cin >> N >> M >> K;
+
+	for (int i = 0; i < N; i++) {
+		cin >> inArr[i];
+	}
+	segmentBuild(0, N-1, 1); // outArr 수정(index 1부터 저장)
+
+	long long a = 0;
+	long long b = 0;
+	long long c = 0;
+	for (int i = 0; i < M + K; i++) {
+		cin >> a >> b >> c;
+		if (a == 1) {
+            // b번째 수에 c를 더하는게 아닌,
+			// b번째 수를 c로 바꿔야 하는건 `c-inArr[b-1]` 로 바꿔야 한다는 의미이다.
+			segmentUpdate(0, N-1, 1, b-1, c-inArr[b-1]);
+			inArr[b - 1] = c; // b->c로 변환 (`c-inArr[b-1]` 에 사용되니까 바꿔줘야함)
+		}
+		else if (a == 2) {
+			cout << segmentSum(0, N-1, 1, b-1, c-1) << '\n';
+		}
+	}
+
+	return 0;
+}
+```
 
 <br><br>
 
