--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-03-(백준_필수3)알고리즘 템플릿 - cpp.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-03-(백준_필수3)알고리즘 템플릿 - cpp.md
@@ -27,6 +27,79 @@ typora-root-url: ../../..
 
 <br><br>
 
+## 문자열 - string
+
+**주의사항**
+
+* c++에서 string은 문자열을 이어붙일때 잘못 사용하면 **O(N^2) 복잡도**를 발생시킬 수 있다.
+  * `s+'a'` 라는 새 문자열 객체를 만든후 `s`에 더하기 때문에 `s+'a'` 만큼 매번 추가로 길이가 필요하기 때문이다.
+* **따라서 반드시 아래 방식으로 사용해야한다 - O(N)**
+  * `'a'` 만 생성되어서 `s` 에 더하기 때문에 `a` 만큼 길이만 추가로 필요하기 때문에 빠르다.
+  * 물론 char[]을 써도 되지만 string이 매우 편리
+
+```c++
+int main() {
+    string s;
+    for(int i = 0 ; i<100000; i++) {
+        // 1. O(N^2) 복잡도 코드
+        s=s+'a';
+        s=s+"ab";
+        // 2. O(N) 복잡도 코드
+        s+='a';
+        s+="ab";
+    }
+}
+```
+
+<br>
+
+**아래 문법들은 기본적으로 암기**
+
+```c++
+int main() {
+	string s = "hello";
+	s += " BKD!"; // hello BKD!
+	cout << s.size() << '\n'; // 10
+	cout << s.substr(2, 3) << '\n'; // llo
+	cout << s[1] << '\n'; // e
+	s.replace(6, 4, "guys"); // hello guys
+	cout << s << '\n';
+	int it = s.find("guys"); // 6
+	s.replace(it, 4, "everyone"); // hello everyone
+	cout << s << '\n';
+	s.erase(7, 6); // hello ee
+	cout << s << '\n';
+	s[6] = 'm'; // hello me
+	cout << s << '\n';
+	s.insert(0, "say "); // say hello me
+	cout << s << '\n';
+	if (s.find("to") == string::npos) // string::npos == -1
+		cout << "'to' is not in string 's'\n";
+}
+```
+
+<br>
+
+**c++ string에서 `split` 함수는 지원하지 않으므로 직 접 구 현**
+
+```c++
+// vector, string 등등은 반드시 주소로 넘겨야 값 복사하는 복잡도 안생김
+vector<string> split(string& inStr, string& sep) {
+	vector<string> ret;
+	int cur = 0;
+	while (cur < inStr.size()) {
+		int nxt = inStr.find(sep, cur); // cur 부터 검색 시작
+		if (nxt == -1) nxt = inStr.size(); // end
+		if (nxt - cur > 0) // 없어도 잘 동작하지만, substr로 나눌 문자열이 길이가 0이면 안되긴 하니까
+			ret.push_back(inStr.substr(cur, nxt - cur));
+		cur = nxt + sep.size(); // sep(구분자)만큼 추가로 이동
+	}
+	return ret;
+}
+```
+
+<br><br>
+
 ## BFS, DFS
 
 **BFS(넢이우선검색), DFS(깊이우선검색)은 정말 단골 문제들이다.** 
@@ -288,7 +361,28 @@ void func(int depth, int sum) {
 
 * **존나 풀어라 : [구현(실버급 인기 순)](https://solved.ac/search?query=%23implementation+*s&sort=solved&direction=desc&page=1)**
 * **자주 나오는 로직은 그냥 외우자**
-  * 예로 2차원 배열 회전 로직은 (x,y) -> (y,n+1-x)
+  * 예로 2차원 배열 회전 로직은 `B[x][y]=A[N-1-y][x]`
+
+```c++
+// 90도 회전 함수
+void rotate() {
+    // 1. tmp에 복제
+	int tmp[12][12]; 
+	for (int i = 0; i < N; i++) {
+		for (int j = 0; j < M; j++) {
+			tmp[i][j] = inArr[i][j];
+		}
+	}
+	// 2. 배열요소 swap
+	for (int i = 0; i < N; i++) { 
+		for (int j = 0; j < M; j++) {
+			inArr[i][j] = tmp[N-1-j][i]; // B[x][y]=A[N-1-y][x]
+		}
+	}
+    // 3. 배열크기 swap
+    swap(N,M);
+}
+```
 
 
 <br><br>
@@ -321,6 +415,10 @@ sort(&inArr[i][0], &inArr[i].back()+1, comp); // back()은 마지막 index
 ## 다이나믹 프로그래밍(DP)
 
 **DP란 여러 개의 하위 문제를 먼저 푼 후 그 결과를 쌓아올려 주어진 문제를 해결하는 알고리즘**
+
+**참고로 DP는 정말 대표하는 문제들이 많고 유형들도 가지각색이라서 많은 경험이 필요**
+
+<br>
 
 **DP를 푸는 과정 - 테이블 잡고 식 찾는 연습이 매우매우 중요**
 
@@ -1048,7 +1146,87 @@ int main() {
 
 <br><br>
 
-## ??
+## 위상 정렬
+
+**위상 정렬(Topological Sort) : 방향 그래프에서 간선으로 주어진 정점 간 선후관계를 위배하지 않도록 나열하는 정렬**
+
+![image-20230506001732475](/images/2023-01-03-(백준_필수3)알고리즘 템플릿 - cpp/image-20230506001732475.png)
+
+```c++
+vector<int> adj[10];
+int deg[10];
+int n; // N개의 정점있고 번호는 1~indexed
+
+queue<int> qu;
+vector<int> vc; // result
+for(int i=1; i<= n; i++)
+    if(deg[i] == 0) qu.push(i);
+while(!qu.empty()){
+    int cur = qu.front(); qu.pop();
+    vc.push_back(cur);
+    for(int next : adj[cur]) {
+        deg[next]--;
+        if(deg[next] == 0) qu.push(next);
+    }
+}
+if(vc.size() != n)
+    cout << "cycle exists";
+else {
+    for(auto x : vc) cout << x << ' ';
+}
+```
+
+<br><br>
+
+## 최소 신장 트리
+
+**https://blog.encrypted.gg/1024**
+
+**크루스칼, 프림 알고리즘이 대표적**
+
+**크루스칼 알고리즘은 Union Find라는 알고리즘을 선행학습 하고 아래 코드를 이해할 것.**
+
+![image-20230506012547858](/images/2023-01-03-(백준_필수3)알고리즘 템플릿 - cpp/image-20230506012547858.png)
+
+<br>
+
+**프림 알고리즘은 우선순위 큐를 이용해서 구현을 하는데, 구현이 좀 복잡하다. 따라서 pass**
+
+<br><br>
+
+## 최단 경로 트리
+
+**https://blog.encrypted.gg/1035, https://blog.encrypted.gg/1037**
+
+**`플로이드 알고리즘`은 모든 정점 쌍 사이의 최단 경로를 구하는 알고리즘이라 O(n3)의 큰 복잡도를 가진다.  
+다만, 구현이 3중 for문으로 간단히 할 수 있으며 n이 1000정도면 이 알고리즘을 써도 된다.**
+
+* 최단 거리 테이블(2차원) 이 채워진다 => 코드보면 d배열 관련인데 생각보다 쉬운 로직!
+* 근데, 경로까지 구하고싶으면 테이블 하나 더 만들어서 기록해놔야 한다 => nxt배열에 기록
+
+![image-20230506013350391](/images/2023-01-03-(백준_필수3)알고리즘 템플릿 - cpp/image-20230506013350391.png)
+
+![image-20230506013359812](/images/2023-01-03-(백준_필수3)알고리즘 템플릿 - cpp/image-20230506013359812.png)
+
+<br>
+
+**`다익스트라 알고리즘 `은 하나의 정점으로부터 다른 모든 정점까지의 최단 거리를 구하는 알고리즘이므로 복잡도는 플로이드보다 한단계 작은 O(n<sup>2</sup>) 이다.**
+
+* 참고 : 가중치가 음의 값이 있으면 이 알고리즘 사용 불가
+* 동작원리는 간단한데 한 정점에서 갈 수 있는 최단 거리 정점을 택하면서 갱신해나가면 된다.
+* 여기서 개선된 알고리즘이 있는데 우선순위 큐를 활용한 알고리즘이다. 이 로직을 기억
+  * 우선순위 큐에 거리를 다 넣어둔다음 매번 최소인걸 선택하는 로직
+  * 물론 경로까지 구하는 방법은 플로이드 알고리즘 때와 유사
+
+![image-20230506014449754](/images/2023-01-03-(백준_필수3)알고리즘 템플릿 - cpp/image-20230506014449754.png)
+
+![image-20230506015237505](/images/2023-01-03-(백준_필수3)알고리즘 템플릿 - cpp/image-20230506015237505.png)
+
+![image-20230506015246272](/images/2023-01-03-(백준_필수3)알고리즘 템플릿 - cpp/image-20230506015246272.png)
+
+<br><br>
+
+## ?? KMP, 트라이 남음
 
 
 
