--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-20-(백준_바킹독)1~11강 필수 문제모음.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-20-(백준_바킹독)1~11강 필수 문제모음.md
@@ -65,10 +65,10 @@ typora-root-url: ../../..
   * [N-Queen](https://www.acmicpc.net/problem/9663)
   * [부분수열의 합](https://www.acmicpc.net/problem/1182)
     * 순열과 조합 관련은 `next_permutation` 사용도 권장
-* **시뮬레이션** => 여기부터
+* **시뮬레이션**
   * [감시](https://www.acmicpc.net/problem/15683)
   * [스티커 붙이기](https://www.acmicpc.net/problem/18808)
-  * [2048 (Easy)](https://www.acmicpc.net/problem/12100)
+  * [2048 (Easy)](https://www.acmicpc.net/problem/12100) => 여기부터
   * [치킨 배달](https://www.acmicpc.net/problem/15686)
 * **정렬 I**
   * pass
